--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.21",
+    "sass-loader": "^13.0.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -20,6 +21,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.54.8",
     "vite": "^3.1.0"
   }
 }
