--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "pinia": "^2.0.21",
     "sass-loader": "^13.0.2",
+    "swiper": "^8.3.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
