--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.13",
     "pinia": "^2.0.21",
     "sass-loader": "^13.0.2",
     "swiper": "^8.3.2",
