--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.13",
+    "axios": "^1.1.2",
+    "jquery": "^3.6.1",
     "pinia": "^2.0.21",
     "sass-loader": "^13.0.2",
     "swiper": "^8.3.2",
