--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "ant-design-vue": "^3.2.13",
     "axios": "^1.1.2",
+    "imask": "^6.4.3",
     "jquery": "^3.6.1",
     "pinia": "^2.0.21",
     "sass-loader": "^13.0.2",
     "swiper": "^8.3.2",
     "vue": "^3.2.38",
+    "vue-imask": "^6.4.3",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/jquery": "^3.5.14",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
