--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_API_URL=https://yegych9923.github.io/cook-service
+VITE_BASE_URL=https://yegych9923.github.io/cook-service
+VITE_API_URL=http://localhost:3000
