--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.2",
     "imask": "^6.4.3",
     "jquery": "^3.6.1",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.21",
     "sass-loader": "^13.0.2",
     "swiper": "^8.3.2",
